records fix v3.2 overflow

--- a/plc_monitoring_frontend/static/styles/records/records.css
+++ b/plc_monitoring_frontend/static/styles/records/records.css
@@ -62,6 +62,7 @@ body {
 .data {
   grid-area: data;
   overflow-x: auto;
+  overflow-y: auto;
 }
 
 .filters {
